--- a/css/simple-sidebar.less
+++ b/css/simple-sidebar.less
@@ -40,7 +40,12 @@
 }
 
 .container{
+	// margin-left: auto;
+	// margin-right: auto;
 	margin-left: 20px;
+	margin-right: 20px;
+	width: inherit;
+
 }
 
 #search-keyword{
