--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -128,6 +128,37 @@ ul.sidebar-nav > li > ul > li > ul > li > ul > li > ul > li > a {
   height: 50px;
   line-height: 50px;
 }
+div.page-control {
+  margin-top: 8px;
+  margin-left: 20px;
+}
+div.page-control i {
+  margin-right: 2px;
+}
+.breadcrumb {
+  background-color: inherit;
+  white-space: nowrap;
+  overflow: hidden;
+}
+.breadcrumb > li + li:before {
+  content: "/";
+  padding: 0 5px;
+  padding-left: 1px;
+  padding-right: 7px;
+  color: #ccc;
+}
+#content-section h1 {
+  font-size: 24pt;
+}
+#content-section h2 {
+  font-size: 22pt;
+}
+#content-section h3 {
+  font-size: 17pt;
+}
+#right-wrapper {
+  padding-top: 51px;
+}
 .nav .breadcrumb {
   margin: 0 7px;
 }
@@ -136,12 +167,6 @@ ul.sidebar-nav > li > ul > li > ul > li > ul > li > ul > li > a {
     float: left;
     margin: 7px 10px;
   }
-}
-.breadcrumb {
-  background-color: inherit;
-}
-#right-wrapper {
-  padding-top: 51px;
 }
 .sidebar-nav li a.tree-open:hover {
   background-color: #f88;
