--- a/css/simple-sidebar.less
+++ b/css/simple-sidebar.less
@@ -109,10 +109,10 @@ h3{
 blockquote{
 	font-size: 12pt;
 }
+
 // -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- //
 // Brand
 // -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- //
-
 .content-header {
 	height: 65px;
 	line-height: 65px;
@@ -200,6 +200,50 @@ ul.sidebar-nav > li > ul > li > ul > li > ul > li > ul > li > a{
 	line-height: 50px;
 }
 
+// -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- //
+// ページ操作
+// -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- //
+div.page-control{
+	margin-top: 8px;
+	margin-left: 20px;
+	i{
+		margin-right: 2px;
+	}
+}
+
+// -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- //
+// パンくず等
+// -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- //
+
+.breadcrumb{
+	background-color: inherit;
+	white-space: nowrap; // 折り返し無し
+	overflow: hidden; // はみ出た分は非表示
+}
+.breadcrumb>li+li:before {
+	content: "/";
+	padding: 0 5px;
+	padding-left: 1px;
+	padding-right: 7px;
+	color: #ccc;
+}
+#content-section{
+	h1{
+		font-size: 24pt; //32px
+	}
+	h2{
+		font-size: 22pt; //29px
+	}
+	h3{
+		font-size: 17pt; //23px
+	}
+}
+
+#right-wrapper{
+	padding-top: @nav_height;
+}
+
+// このへんは navbar 内パンくずなので、現在は未使用
 .nav .breadcrumb {
 	margin: 0 7px;
 }
@@ -208,14 +252,6 @@ ul.sidebar-nav > li > ul > li > ul > li > ul > li > ul > li > a{
 		float: left;
 		margin: 7px 10px;
 	}
-}
-
-.breadcrumb{
-	background-color: inherit;
-}
-
-#right-wrapper{
-	padding-top: @nav_height;
 }
 
 // -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- //
