--- a/css/simple-sidebar.less
+++ b/css/simple-sidebar.less
@@ -214,7 +214,7 @@ div.page-control{
 // -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- //
 // メッセージ表示
 // -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- -- //
-#error-message{
+.error-message{
 	margin-top: 8px;
 	margin-left: 20px;
 	margin-right: 20px;
