--- a/css/simple-sidebar.less
+++ b/css/simple-sidebar.less
@@ -300,6 +300,10 @@ div.page-control{
 	padding-bottom: 0px;
 }
 
+#tree-box ul.treeview{
+	padding-bottom: 88px;
+}
+
 #tree-box li{
 	vertical-align: middle;
 	padding-top: 0px;
