letter-spacing = 0.1em

--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -418,7 +418,9 @@ html,body{
 }
 pre code {
   font-family: 'ＭＳ ゴシック';
+  letter-spacing: 0.1em;
 }
 blockquote {
   font-family: 'ＭＳ ゴシック';
+  letter-spacing: 0.1em;
 }
