--- a/css/simple-sidebar.less
+++ b/css/simple-sidebar.less
@@ -586,9 +586,11 @@ html,body{
 // コード部のフォント
 pre code{
 	font-family: 'ＭＳ ゴシック';
+	letter-spacing: 0.1em;
 }
 
 // 引用部
 blockquote{
 	font-family: 'ＭＳ ゴシック';
+	letter-spacing: 0.1em;
 }
