code letter-spacing = 0

--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -418,7 +418,7 @@ html,body{
 }
 pre code {
   font-family: 'ＭＳ ゴシック';
-  letter-spacing: 0.1em;
+  letter-spacing: 0;
 }
 blockquote {
   font-family: 'ＭＳ ゴシック';
