編集モード時に件名入力ボックスを表示

--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -424,3 +424,15 @@ blockquote {
   font-family: 'ＭＳ ゴシック';
   letter-spacing: 0.1em;
 }
+.content-header h1 {
+  display: block;
+}
+.content-header #edit-path-wrapper {
+  display: none;
+}
+.edit-mode .content-header h1 {
+  display: none;
+}
+.edit-mode .content-header #edit-path-wrapper {
+  display: block;
+}
